--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
         <div id="content">
             {% block content %}{% endblock %}
         </div>
+            {% block include_js %}
+    {% endblock %}
         <script>
       document.addEventListener('DOMContentLoaded', (event) => {
         // DOM-модель загружена
